--- a/PLDroidShortVideoDemo/app/src/main/res/layout/activity_welcome.xml
+++ b/PLDroidShortVideoDemo/app/src/main/res/layout/activity_welcome.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tool="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,9 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-
-        android:src="@mipmap/ic_launcher" />
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/product"
@@ -23,22 +20,10 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:text="@string/product"
+        android:text="正在加载特效素材。。。"
         android:layout_below="@id/icon"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:textColor="@color/colorUnChecked"/>
-
-    <TextView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:text="@string/logo"
-        android:layout_below="@id/product"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp"
         android:textColor="@color/colorUnChecked"/>
 
     <Button
@@ -71,15 +56,4 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone"
         />
-    <TextView
-        android:id="@+id/tv_version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        tools:text="v1.0"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/darker_gray"/>
 </RelativeLayout>
